fix img in project overlapping navbar

--- a/src/_sass/landing/projects/_project.scss
+++ b/src/_sass/landing/projects/_project.scss
@@ -7,6 +7,7 @@
   width: 80%;
   height: auto;
   max-width: 600px;
+  z-index: -1;
 }
 
 .project-container__project {
